--- a/assets/kitty/kitty.conf
+++ b/assets/kitty/kitty.conf
@@ -2,6 +2,8 @@ window_padding_width 8
 
 font_family Fira Code
 
+enable_audio_bell false
+
 foreground            #ebdbb2
 background            #272727
 selection_foreground  #655b53
