partially revert "pkgs: remove mutt and associated conf"
This reverts commit 0367c6bb197fe1ca0c88e63a9ac59516bf3288bd,
restoring access to my email. that's improtant.

--- a/assets/isync.conf
+++ b/assets/isync.conf
@@ -2,7 +2,7 @@
 IMAPAccount gmail
 Host imap.gmail.com
 User lincolnauster@gmail.com
-PassCmd "gpg --batch -q --decrypt ~/.config/mutt/account.gpg"
+PassCmd "gpg --batch -q --decrypt ~/.config/gmail-pass.gpg"
 SSLType IMAPS
 
 IMAPStore gmail-remote
